force-app/main/default/objects/Employee__c/fields/Eligible_for_bonus__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_bonus__c</fullName>
    <formula>IF(ISPICKVAL( Employee_Type__c , &quot;Salesforce Consultant&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible  for bonus</label>
    <type>Checkbox</type>
</CustomField>