force-app/main/default/objects/Employee__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>SFDC QA</fullName>
            </value>
            <value>
                <fullName>DevOops Engg.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>