force-app/main/default/objects/Employee__c/fields/Phone_cft__c.field-meta.xml
<CustomField>
    <fullName>Phone_cft__c</fullName>
    <label>Phone cft</label>
    <type>Phone</type>
</CustomField>