force-app/main/default/objects/Employee__c/validationRules/validation_for_PAN_card_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_for_PAN_card_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    REGEX(
        Pan_Card_Number__c,
        &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>Pan_Card_Number__c</errorDisplayField>
    <errorMessage>PAN Card Syntax is incorrect</errorMessage>
</ValidationRule>