force-app/main/default/objects/Employee__c/listViews/My_Queue_Employee.listView-meta.xml
<ListView>
    <fullName>My_Queue_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>My Queue</label>
    <queue>My_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>